--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/Library
+/ProjectSettings
+/Temp
+/UnityPackageManager
+/UnityHexMap.Editor.csproj
+/UnityHexMap.csproj
+/New Unity Project.sln
