--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,5 @@ __pycache__/
 /UnityHexMap.Editor.csproj
 /UnityHexMap.csproj
 /New Unity Project.sln
+/New Unity Project.Editor.csproj
+/New Unity Project.csproj
